test/should-fail/不合法的整数-5.j
function test takes nothing returns nothing
    local integer a = 2222222222222222222222222222222
endfunction